--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,18 @@
     position: absolute;
     bottom: 0;
     width: 80px;
+    
     animation: pipe-animation 2s infinite linear;
 }
 
 .mario {
+    position: absolute;
     width: 150px;
+    bottom: 0;
+}
+
+.jump {
+    animation: jump 500ms ease-out;
 }
 
 @keyframes pipe-animation {
@@ -32,4 +39,28 @@
     to {
         right: 100%;
     }
+}
+
+@keyframes jump {
+
+    0% {
+        bottom: 0;
+    }
+
+    40% {
+        bottom: 180px;
+    }
+ 
+    50% {
+        bottom: 180px;
+    }
+
+    60% {
+        bottom: 180px;
+    }
+
+    100% {
+        bottom: 0;
+    }
+
 }
