--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,20 @@
 }
 
 .game-board {
-    width: 80%;
+    width: 100%;
     height: 500px;
-    border: 1px solid #333;
+    border: 15px solid green;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
 .pipe {
     position: absolute;
     bottom: 0;
     width: 80px;
-    
-    animation: pipe-animation 2s infinite linear;
+    animation: pipe-animation 2.5s infinite linear;
 }
 
 .mario {
@@ -29,6 +29,12 @@
 
 .jump {
     animation: jump 500ms ease-out;
+}
+
+.clouds {
+    position: absolute;
+    width: 550px;
+    animation: clouds-animation 20s infinite linear;
 }
 
 @keyframes pipe-animation {
@@ -59,8 +65,26 @@
         bottom: 180px;
     }
 
+    70% {
+        bottom: 180px;
+    }
+
+    80% {
+        bottom: 150px;
+    }
+
     100% {
         bottom: 0;
     }
 
+}
+
+@keyframes clouds-animation {
+    from {
+        right: -550px;
+    }
+
+    to {
+        right: 100%;
+    }
 }
